--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clearFocus"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -28,12 +29,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:background="@color/white" />
-                <TextView
-                    android:visibility="gone"
-                    android:id="@+id/txtFocus"
-                    android:focusable="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
                 <FrameLayout
                     android:id="@+id/frameTrangChu"
                     android:layout_width="match_parent"
@@ -49,7 +44,7 @@
                 android:layout_gravity="bottom"
                 android:layout_alignParentBottom="true"
                 app:labelVisibilityMode="labeled"
-                android:background="#80444444"
+                android:background="#444444"
                 app:itemIconTint="@drawable/nav_change_item"
                 app:itemTextColor="@drawable/nav_change_item"
                 app:menu="@menu/navigation" />
