--- a/app/src/main/res/layout/layout_favoretis.xml
+++ b/app/src/main/res/layout/layout_favoretis.xml
@@ -4,6 +4,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/bgToolBar" />
     <ListView
         android:id="@+id/lvFavoretis"
         android:padding="@dimen/padding"
