--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
     <ListView
         android:id="@+id/lvHistory"
-        android:padding="@dimen/padding"
+        android:padding="@dimen/_10sdp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
