--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -8,7 +8,7 @@
         android:id="@+id/txtword"
         android:layout_weight="1"
         android:padding="@dimen/padding"
-        android:textSize="@dimen/word_size"
+        android:textSize="@dimen/_15sdp"
         android:layout_gravity="center"
         android:text="Hello"
         android:layout_width="match_parent"
