--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,54 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        app:titleTextColor="@color/black"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white" />
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical">
 
-    <View
-        android:background="@color/bgToolBar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_1sdp" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            app:titleTextColor="@color/black"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        <View
+            android:background="@color/bgToolBar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp" />
 
-        <TextView
-            android:id="@+id/txtKeyDetail"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:padding="@dimen/_10sdp"
-            android:text="abacus"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txtKeyDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:padding="@dimen/_10sdp"
+                android:text="abacus"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_20sdp" />
+
+            <ImageView
+                android:id="@+id/imgListen"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_margin="@dimen/_10sdp"
+                android:src="@drawable/icon_listen" />
+        </LinearLayout>
+        <View
+            android:background="@color/bgToolBar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp" />
+        <TextView
+            android:textSize="@dimen/_20sdp"
+            android:id="@+id/txtDetail"
             android:textColor="@color/black"
-            android:textSize="@dimen/_20sdp" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-        <ImageView
-            android:id="@+id/imgListen"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_margin="@dimen/_10sdp"
-            android:src="@drawable/icon_listen" />
     </LinearLayout>
-    <View
-        android:background="@color/bgToolBar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_1sdp" />
-    <TextView
-        android:textSize="@dimen/_20sdp"
-        android:id="@+id/txtDetail"
-        android:textColor="@color/black"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-</LinearLayout>
+</ScrollView>
